# DistilLite

./: .gitignore  README.md  main.py  pyproject.toml
datagen/: japanese.py
distillite/data/: __init__.py  config.py  loader.py
distillite/datagen/: japanese.py
distillite/distill/: __init__.py  lora.py
distillite/model/: __init__.py  qwen3.py
distillite/orchestrator/: __init__.py  inference.py  orchestrator.py  train.py
distillite/utils/: __init__.py  log.py  time.py
pipo/: data.py  hardware.py  model.py  utils.py
pipo/data/: loader.py
pipo/model/: base.py  model.py  qwen3.py
pipo/utils/: time.py
