[project]
name = "distillite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.8.1",
    "black>=25.1.0",
    "bokeh>=3.7.3",
    "dask[distributed]>=2025.7.0",
    "datasets>=4.0.0",
    "gputil>=1.4.0",
    "h5py>=3.14.0",
    "huggingface-hub>=0.33.4",
    "isort>=6.0.1",
    "matplotlib>=3.10.5",
    "nltk>=3.9.1",
    "pandas>=2.3.1",
    "psutil>=7.0.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "transformers>=4.53.2",
]
